force-app/main/default/objects/Txn_Line_Item__c/Txn_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line Items that make up a total for a parent Transaction</description>
    <label>Txn Line Item</label>
    <nameField>
        <displayFormat>TLI-{0}</displayFormat>
        <label>Txn Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Txn Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>