force-app/main/default/objects/Txn_Line_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <description>The item description for this line in the transaction; user will most likely see this exact content</description>
    <inlineHelpText>The item description for this line in the transaction; user will most likely see this exact content</inlineHelpText>
    <label>Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>