force-app/main/default/objects/Txn_Line_Item__c/fields/Promotion_Level__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This tracks the loyalty tier that triggered the transaction line item to be created (either for loyalty tier promotion or a bonus loyalty level)</description>
    <inlineHelpText>This tracks the loyalty tier that triggered the transaction line item to be created (either for loyalty tier promotion or a bonus loyalty level)</inlineHelpText>
    <label>Promotion Level</label>
    <referenceTo>Level__c</referenceTo>
    <relationshipLabel>Txn Line Items</relationshipLabel>
    <relationshipName>Loyalty_Txn_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>