force-app/main/default/objects/Txn_Line_Item__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Quantity__c *  Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>