force-app/main/default/objects/Txn_Line_Item__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent transaction</description>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Txn Line Items</relationshipLabel>
    <relationshipName>Txn_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>