force-app/main/default/objects/Txn_Line_Item__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <description>The price paid for a unit of measure</description>
    <inlineHelpText>The price paid for a unit of measure</inlineHelpText>
    <label>Unit Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>